@@ -226,6 +226,14 @@ public class InternalCrossoverPipeline extends GPBreedingPipeline
         // grab n individuals from our source and stick 'em right into inds.
         // we'll modify them from there
         int n = sources[0].produce(min,max,start,subpopulation,inds,state,thread);
+
+
+		// should we bother?
+		if (!state.random[thread].nextBoolean(likelihood))
+			return reproduce(n, start, subpopulation, inds, state, thread, false);  // DON'T produce children from source -- we already did
+
+
+
         GPInitializer initializer = ((GPInitializer)state.initializer);
 
         for(int q=start;q<n+start; q++)
