@@ -135,6 +135,10 @@ public class MutateERCPipeline extends GPBreedingPipeline
         // we'll modify them from there
         int n = sources[0].produce(min,max,start,subpopulation,inds,state,thread);
 
+		// should we bother?
+		if (!state.random[thread].nextBoolean(likelihood))
+			return reproduce(n, start, subpopulation, inds, state, thread, false);  // DON'T produce children from source -- we already did
+
         // now let's mutate 'em
         for(int q=start; q < n+start; q++)
             {
