@@ -251,6 +251,13 @@ public class CrossoverPipeline extends GPBreedingPipeline
         int n = typicalIndsProduced();
         if (n < min) n = min;
         if (n > max) n = max;
+
+		// should we bother?
+		if (!state.random[thread].nextBoolean(likelihood))
+			return reproduce(n, start, subpopulation, inds, state, thread, true);  // DO produce children from source -- we've not done so already
+
+
+
         GPInitializer initializer = ((GPInitializer)state.initializer);
         
         for(int q=start;q<n+start; /* no increment */)  // keep on going until we're filled up
