@@ -210,6 +210,10 @@ public class ListCrossoverPipeline extends BreedingPipeline
         if (n > max) n = max;
              
 
+		// should we bother?
+		if (!state.random[thread].nextBoolean(likelihood))
+			return reproduce(n, start, subpopulation, inds, state, thread, true);  // DO produce children from source -- we've not done so already
+
         for(int q=start;q<n+start; /* no increment */)  // keep on going until we're filled up
             {
             // grab two individuals from our sources
