@@ -107,7 +107,7 @@ public class VectorCrossoverPipeline extends BreedingPipeline
 		
 		// should we bother?
 		if (!state.random[thread].nextBoolean(likelihood))
-			return reproduce(n, n, start, subpopulation, inds, state, thread, false);
+			return reproduce(n, start, subpopulation, inds, state, thread, true);  // DO produce children from source -- we've not done so already
 
         for(int q=start;q<n+start; /* no increment */)  // keep on going until we're filled up
             {
