@@ -61,6 +61,10 @@ public class VectorMutationPipeline extends BreedingPipeline
         // we'll modify them from there
         int n = sources[0].produce(min,max,start,subpopulation,inds,state,thread);
 
+		// should we bother?
+		if (!state.random[thread].nextBoolean(likelihood))
+			return reproduce(n, start, subpopulation, inds, state, thread, false);  // DON'T produce children from source -- we already did
+
         // clone the individuals if necessary
         if (!(sources[0] instanceof BreedingPipeline))
             for(int q=start;q<n+start;q++)
